# jsonrpc

./: .gitignore  CMakeLists.txt  json-rpc.cpp
include/json-rpc/: json-rpc.h  lsp-transport.h  stdio-transport.h  transport.h
tests/: main.cpp
